# tesserae

./: .gitignore  404.html  index.html  package-lock.json  package.json
tesserae_front/: Cargo.toml  app.config.ts  index.html.old  jsconfig.json  package-lock.json  package.json  vite.config.js
tesserae_front/src/: App.css  App.jsx  app.jsx
tesserae_front/src/assets/audios/music/: childrenoflumiere.opus
tesserae_front/src/components/footer/: index.jsx
tesserae_front/src/components/music-player/: index.jsx
tesserae_front/src/components/navigator/: index.jsx
tesserae_front/src/components/stories-highlights/: index.jsx
tesserae_front/src/components/ui/: button.jsx  card.jsx  input.jsx  label.jsx  navigation-menu.jsx
tesserae_front/src/components/ui/icons/: ant-design-appstore-outlined.jsx  ant-design-code-outlined.jsx  ant-design-coffee-outlined.jsx  ant-design-function-outlined.jsx  ant-design-github-outlined.jsx  ant-design-home-filled.jsx  ant-design-home-outlined.jsx  ant-design-info-outlined.jsx  ant-design-login-outlined.jsx  ant-design-pause-outlined.jsx  (+3 more)
tesserae_front/src/lib/network/: Network.js  Network.ts  README.md
tesserae_front/src/pages/authentication/: index.jsx  login.jsx  utils.jsx
tesserae_front/src/pages/home/: home.jsx
tesserae_front/src/pages/loginScreen/: index.jsx
tesserae_front/src/pages/profile/: index.jsx
tesserae_front/src/pages/registration/: index.jsx  utils.jsx
tesserae_front/src/routes/: auth.jsx  index.jsx
tesserae_front/src/routes/profile/: [username].jsx
tesserae_front/src/utils/: api.js  cloud.js
(+97 files in other folders)
